# kaggle-playground-utils

./: .gitignore  LICENSE  README.md  _nan_probe.py  pyproject.toml  s6e4_signal_factory_top.csv
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
docs/: s6e4-postmortem.md
examples/: s6e4_algo_sweep.py  s6e4_blend_subsets.py  s6e4_reblend.py  s6e4_seed_sweep.py  s6e4_signal_factory.py  s6e4_v14_reproduction.py  s6e4_v30_signal_enhanced.py  s6e4_v31_factory_v2.py  s6e4_v32_algo_on_v30.py  s6e4_v33_expanded_factory.py  s6e4_v34_greedy_round1_diagnostic.py
notebooks/: _build_notebook.py  kernel-metadata.json  s6e4_signal_factory_tutorial.ipynb
notebooks/templates/: 01_eda_dashboard.ipynb  01_eda_dashboard.py
src/kaggle_playground_utils/: __init__.py  blend.py  cache.py  config.py  curated_blend.py  diagnose.py  diary.py  drive.py  encoding.py  environment.py  evaluate.py  features.py  greedy_selection.py  harvesting.py  hypothesis.py  observer.py  postprocess.py  probes.py  registry.py  signal_factory.py  train.py  viz.py
tests/: test_blend.py  test_curated_blend.py  test_drive.py  test_encoding.py  test_environment.py  test_features.py  test_harvesting.py  test_postprocess.py  test_train.py
